add config file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
+      - ./immich.config.json:/usr/src/app/immich.config.json
     env_file:
       - .env
     ports:
@@ -29,6 +30,7 @@ services:
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
+      - ./immich.config.json:/usr/src/app/immich.config.json
     env_file:
       - .env
     depends_on:
